package com.team.factorymethod;

/**
 * java_learn_note
 *
 * @author zhangbc
 * @version v1.0.0
 * @date 3/27/23 12:47 AM
 **/
public class Car implements Movable {
    @Override
    public void go() {
        System.out.println("Car go www...");
    }
}
