package com.team.factorymethod;

/**
 * java_learn_note
 *
 * @author zhangbc
 * @version v1.0.0
 * @date 3/27/23 12:50 AM
 **/
public interface Movable {
    /**
     * 交通方式
     */
    void go();
}
